@@ -3,7 +3,7 @@
   <parent>
     <artifactId>ebean-parent</artifactId>
     <groupId>io.ebean</groupId>
-    <version>13.20.2-SNAPSHOT</version>
+    <version>14.6.0</version>
   </parent>
 
   <artifactId>ebean-core</artifactId>
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>io.ebean</groupId>
       <artifactId>ebean-api</artifactId>
-      <version>13.20.2-SNAPSHOT</version>
+      <version>14.6.0</version>
     </dependency>
 
     <dependency>
@@ -46,19 +46,19 @@
     <dependency>
       <groupId>io.ebean</groupId>
       <artifactId>ebean-core-type</artifactId>
-      <version>13.20.2-SNAPSHOT</version>
+      <version>14.6.0</version>
     </dependency>
 
     <dependency>
       <groupId>io.ebean</groupId>
       <artifactId>ebean-externalmapping-api</artifactId>
-      <version>13.18.0</version>
+      <version>14.0.0</version>
     </dependency>
 
     <dependency>
       <groupId>org.antlr</groupId>
       <artifactId>antlr4-runtime</artifactId>
-      <version>4.8-1</version>
+      <version>4.13.1</version>
     </dependency>
 
     <!--
@@ -81,15 +81,15 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- JAVAX-DEPENDENCY-START -->
+    <!-- JAVAX-DEPENDENCY-START ___
     <dependency>
       <groupId>javax.transaction</groupId>
       <artifactId>javax.transaction-api</artifactId>
       <version>1.3</version>
       <optional>true</optional>
     </dependency>
-    <!-- JAVAX-DEPENDENCY-END -->
-    <!-- JAKARTA-DEPENDENCY-START ___
+    ____ JAVAX-DEPENDENCY-END -->
+    <!-- JAKARTA-DEPENDENCY-START -->
     <dependency>
       <groupId>jakarta.transaction</groupId>
       <artifactId>jakarta.transaction-api</artifactId>
@@ -102,7 +102,7 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
-    ____ JAKARTA-DEPENDENCY-END -->
+    <!-- JAKARTA-DEPENDENCY-END -->
 
     <!-- validation annotations Size etc -->
     <dependency>
@@ -151,7 +151,7 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.5.1</version>
+      <version>42.7.2</version>
       <optional>true</optional>
     </dependency>
 
@@ -159,21 +159,21 @@
     <dependency>
       <groupId>io.ebean</groupId>
       <artifactId>ebean-platform-h2</artifactId>
-      <version>13.20.2-SNAPSHOT</version>
+      <version>14.6.0</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>io.ebean</groupId>
       <artifactId>ebean-platform-postgres</artifactId>
-      <version>13.20.2-SNAPSHOT</version>
+      <version>14.6.0</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>io.ebean</groupId>
       <artifactId>ebean-platform-sqlserver</artifactId>
-      <version>13.20.2-SNAPSHOT</version>
+      <version>14.6.0</version>
       <scope>test</scope>
     </dependency>
 
@@ -181,13 +181,6 @@
       <groupId>io.ebean</groupId>
       <artifactId>ebean-datasource</artifactId>
       <version>${ebean-datasource.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>io.avaje</groupId>
-      <artifactId>junit</artifactId>
-      <version>1.1</version>
       <scope>test</scope>
     </dependency>
 
@@ -218,6 +211,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <argLine>-Dnet.bytebuddy.experimental=true</argLine>
           <useSystemClassLoader>false</useSystemClassLoader>
           <trimStackTrace>false</trimStackTrace>
           <failIfNoTests>false</failIfNoTests>
